--- a/src/pages/catalog/product-collection/product-collection.module.scss
+++ b/src/pages/catalog/product-collection/product-collection.module.scss
@@ -1,9 +1,21 @@
 .prod-collection {
   text-decoration: none;
 
+  &:not(.prod-collection--list) {
+    .prod-grid-item {
+      @media (max-width: 479.98px) {
+        width: 320px;
+      }
+    }
+  }
+
   &--list {
     display: flex;
     flex-direction: column;
     gap: 20px;
+  }
+
+  @media (max-width: 479.98px) {
+    justify-content: center;
   }
 }
